<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_title"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/memberTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/member_id_title"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/memberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/dataTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_type_title"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/type_spinner_values" />

        <TextView
            android:id="@+id/lastUpdatedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_updated"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lastUpdatedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <Button
            android:id="@+id/lastUpdatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="findLastUpdated"
            android:text="@string/last_updated_button" />

        <Button
            android:id="@+id/mutationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sync"
            android:text="@string/sync_button" />

        <Button
            android:id="@+id/bluetoothSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scan"
            android:text="Search" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>